# AMF

./: .gitignore  CMakeLists.txt  README.md  rbac-policy.conf
config/: amf-config.json  amf-config.yaml
include/amf/: amf.hpp  cli.hpp  interfaces.hpp
include/amf/adapters/: console_adapters.hpp  network_adapters.hpp
include/amf/app/: amf_services.hpp
include/amf/config/: runtime_config.hpp
include/amf/logging/: file_logger.hpp
include/amf/modules/: control_plane.hpp  interworking.hpp  mobility.hpp  registration.hpp  session_management.hpp  user_plane.hpp
src/: amf.cpp  cli.cpp  main.cpp
src/adapters/: console_adapters.cpp  network_adapters.cpp
src/app/: amf_services.cpp
src/config/: runtime_config.cpp
src/logging/: file_logger.cpp
src/modules/: control_plane.cpp  interworking.cpp  mobility.cpp  registration.cpp  session_management.cpp  user_plane.cpp
tests/: amf_tests.cpp  cli_tests.cpp  config_logging_tests.cpp  n12_n15_interop_tests.cpp  n14_n22_interop_tests.cpp  n1_interop_tests.cpp  n26_interop_tests.cpp  n2_interop_tests.cpp  n3_interop_tests.cpp  n8_n11_interop_tests.cpp
